--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.kamikadze_zm</groupId>
     <artifactId>announcer-task-generator</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <name>AnnouncerTaskGenerator</name>
@@ -23,7 +23,12 @@
         <dependency>
             <groupId>ru.kamikadze_zm</groupId>
             <artifactId>onair-parser</artifactId>
-            <version>0.2.3</version>
+            <version>0.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.8.1</version>
         </dependency>
     </dependencies>
 
