--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.kamikadze_zm</groupId>
+    <groupId>xyz.pary</groupId>
     <artifactId>announcer-task-generator</artifactId>
-    <version>1.3.1</version>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
     <name>AnnouncerTaskGenerator</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>ru.kamikadze_zm.announcertaskgenerator.Main</mainClass>
+        <mainClass>xyz.pary.announcertaskgenerator.Main</mainClass>
     </properties>
 
     <organization>
@@ -21,14 +21,14 @@
     
     <dependencies>
         <dependency>
-            <groupId>ru.kamikadze_zm</groupId>
+            <groupId>xyz.pary</groupId>
             <artifactId>onair-parser</artifactId>
-            <version>0.3.1</version>
+            <version>0.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.8.1</version>
+            <version>2.14.0</version>
         </dependency>
     </dependencies>
 
